# dhan-rs

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  PLAN.md  README.md  flake.nix  publish.sh
.github/workflows/: ci.yml  publish.yml
src/: client.rs  constants.rs  error.rs  lib.rs
src/api/: auth.rs  conditional.rs  edis.rs  forever_order.rs  funds.rs  historical.rs  ip.rs  market_quote.rs  mod.rs  option_chain.rs  orders.rs  portfolio.rs  profile.rs  statements.rs  super_order.rs  traders_control.rs
src/types/: auth.rs  conditional.rs  edis.rs  enums.rs  forever_order.rs  funds.rs  historical.rs  market_quote.rs  mod.rs  option_chain.rs  orders.rs  portfolio.rs  postback.rs  profile.rs  statements.rs  super_order.rs  traders_control.rs
src/ws/: manager.rs  market_feed.rs  mod.rs  order_update.rs
tests/: sandbox.rs
