[package]
name = "dhan-rs"
version = "0.1.0"
edition = "2024"
description = "Rust client library for the DhanHQ Broker API v2"
license = "MIT"
repository = "https://github.com/yourusername/dhan-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
byteorder = "1"
url = "2"
