[package]
name = "dhan-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unofficial Rust client library for the DhanHQ Broker API v2 — orders, market data, WebSocket feeds, and more"
license = "MIT"
repository = "https://github.com/SPRAGE/dhan-rs"
homepage = "https://github.com/SPRAGE/dhan-rs"
documentation = "https://docs.rs/dhan-rs"
readme = "README.md"
keywords = ["dhan", "trading", "broker", "api", "finance"]
categories = ["api-bindings", "finance"]
authors = ["SPRAGE"]
exclude = ["PLAN.md", "flake.nix", "flake.lock", ".direnv/", "publish.sh"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
url = "2"
futures-util = { version = "0.3.32", features = ["sink"] }
